# Automation

./: .gitignore  README.md  ai_predict.py  coupon_list.csv  give_coupon.py  input.txt  mixpanel.csv  mixpanel.py  mixpanel_parse.py  output.csv  user_search.py  user_tb.csv
mixpanel_users/: mixpanel_image_list.csv  mixpanel_user_list.csv
withPython/: ba.py  firestore.py  gifts.csv  main.py  phones.csv  pyproject.toml  results.csv  visit.csv
withPython/keys/: cat-project-firebase.json
