[tool.poetry]
name = "withpython"
version = "0.1.0"
description = ""
authors = ["Dohyun-Ko <dohyun682@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
firebase-admin = "^6.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"